# client1

./: CMakeLists.txt  instruction.md  project-summary.md  requirements.md
agents/: README.md
agents/developer/: developer-agent.md  test-results.md
agents/reviewer/: review-results.md  reviewer-agent.md
agents/scrum-master/: scrum-master-agent.md
agents/setup-client-env/: setup-client-env.agent.md  setup-client-env.py
agents/setup-client-env/scripts/: configure-vscode-debug.sh  install-cpp.sh  install-docker.sh  install-gtest.sh  install-opencv.sh  install-qt.sh  install-system.sh  install-vcpkg.sh  install-vscode.sh
agents/setup-client-env/skills/: vscode_run_debug.md
backlogs/: product-backlog.md  sprint-backlog-1.md  sprint-backlog-2.md  sprint-backlog-template.md
docs/: interface-protocol.md
scripts/: control_integration_client.py  mock_control_server.py  run_control_integration_test.sh  run_tests.sh
src/control/: ControlClient.cpp  ControlClient.h
src/streaming/: StreamClient.cpp  StreamClient.h
tests/: control_network_smoke.cpp  control_test.cpp  streaming_test.cpp
